# localGPT

./: .dockerignore  .gitignore  Dockerfile  README.md  constants.py  docker-compose.yml  localGPT_UI.py  pyproject.toml  run_localGPT.py  run_localGPT_API.py  settings.py
